    accurate emulation of machines with 10 MHz CPU
  * fixed FILE: bug in re-opening read only files
  * fixed keys "sticking" because of buggy FLTK file chooser on Linux
  * fixed Z80 clock stretching on debug writes to NICK ports
  * added support for new formats in epcompress (-m1, -m4, and -m6)
  * experimental support for MIDI port emulation using PortMidi

Changes in version 2.0.11.1
---------------------------

  * fixed error on Windows with non-ASCII characters in the user name

Changes in version 2.0.11
-------------------------

  * implemented Videoton TVC emulation
  * the epimgconv utility has a graphical user interface now, and it can
    also convert images to TVC format
  * various improvements and new features in the epcompress utility
  * SID card emulation using reSID 1.0
  * the debugger window has been made resizeable within a limited range
  * improved support for Unicode characters in file names on Windows
  * unformatted or non-FAT floppy disk images default to 80/2/9 geometry
    if the file size is 737280 bytes
  * fixed bug in re-opening files selected with a file chooser dialog
  * fixed FILE device bug in EXOS 10 with files larger than 64 KB
  * some other bug fixes

Changes in version 2.0.10
-------------------------

  * implemented mouse (EnterMice) support in the Enterprise emulation
  * when loading a snapshot from the command line, the machine type is
    autodetected from the file if not specified
  * window icons have been implemented on non-Windows platforms if the
    emulator is built with FLTK 1.3.3 or newer
  * on the Enterprise and CPC, the external joysticks can now have a
    second and third fire button, configured as keys 0x75-0x76 (EXT1)
    and 0x7D-0x7E (EXT2)
  * more accurate emulation of NICK port reading and floating data bus
  * improved timing accuracy of NICK and DAVE port I/O (this may break
    compatibility with some demo files recorded with older versions)